--- a/042818_results.Rmd
+++ b/042818_results.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Draft Results"
+title: "Results & Analyses for Earthworm MS by MRJ"
 author: "Michelle R. Jackson"
 date: "4/28/2018"
 output: github_document
