--- a/050118_results_CU.Rmd
+++ b/050118_results_CU.Rmd
@@ -154,13 +154,9 @@ size<-log(allData$mass+1)*1.5 #for setting size of points proportional to worm b
 svg(filename="nmds_withFrax.svg", 
     width=6.5, 
     height=6.5)
-plot(meta, type = "n",cex.axis=1.8, cex.lab=1.8)
-plot.new(meta, display = "sites", cex = size, pch=19, col = col.gr[treatment])
-```
 #text(meta, display = "spec", cex=0.7)
-```{r}
+plot(meta, type = "n",cex.axis=1.8, cex.lab=1.8)
+points(meta, display = "sites", cex = size, pch=19, col = col.gr[treatment])
 ordiellipse(meta, allData$site, conf = 0.95, label = TRUE,cex=1.8)
-dev.off()
 ```
-
 
